--- a/src/componentes/Formulario/Formulario.css
+++ b/src/componentes/Formulario/Formulario.css
@@ -6,7 +6,7 @@
 
 .formulario form {
     max-width: 80%;
-    background-color: #F2F2F2;
+    background-color: red;
     border-radius: 20px;
     padding: 36px 64px;
     box-shadow: 7px 7px 15px 0px rgba(0, 0, 0, 0.08);
